# whisper_service

./: Cargo.toml
.github/workflows/: deploy.yml
src/: main.rs
