[package]
name = "whisper_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
whisper-rs = "0.10"
bytes = "1.10.1"
hound = "3.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace", "timeout", "limit"] }
uuid = { version = "1.x", features = ["v4", "serde"] }
num_cpus = "1.16.0"
