[package]
name = "whisper_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
whisper-rs = "0.10"
bytes = "1.10.1"
hound = "3.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace", "timeout", "limit"] }
uuid = { version = "1.x", features = ["v4", "serde"] }
num_cpus = "1.16.0"
dotenv = "0.15"
sha2 = "0.11.0-pre.5"
base64 = "0.22.1"
num-complex = "0.4.6"
blake3 = "1.8.2"
futures = "0.3.31"
redis = { version = "0.22", features = ["tokio-comp"] }
rustfft = "6.1"
libc = "0.2.175" # For WAV
webm = "2.1.0"
symphonia = { version = "0.5", features = [
    "mp3",      # MP3 support
    "aac",      # AAC support
    "flac",     # FLAC support
    "wav",      # WAV support
    "ogg",      # OGG container support
    "isomp4",   # ISO MP4 container support
]}
